--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,12 @@ plugins {
     id 'java'
 }
 
-group 'org.example'
+group 'woowacourse-projects'
 version '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
+    maven { url 'https://jitpack.io' }
 }
 
 dependencies {
@@ -14,6 +15,13 @@ dependencies {
     testImplementation('org.junit.jupiter:junit-jupiter:5.7.0')
     testImplementation('org.assertj:assertj-core:3.18.1')
     testImplementation('org.mockito:mockito-inline:3.6.0')
+    implementation ('com.github.woowacourse-projects:mission-utils:1.1.0')
+}
+
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
 }
 
 test {
